--- a/index.html
+++ b/index.html
@@ -2,152 +2,93 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>SMS FORWARDING PANEL</title>
   <style>
     body {
       margin: 0;
-      padding: 0;
       background: black;
-      font-family: 'Courier New', Courier, monospace;
+      font-family: 'Courier New', monospace;
       color: #00ff00;
       overflow: hidden;
     }
-    .matrix-bg {
+    .matrix {
       position: fixed;
-      width: 100%;
-      height: 100%;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
       z-index: -1;
-      background: black;
     }
-    canvas {
-      display: block;
-    }
-    .login-container, .panel-container {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
+    .content {
       text-align: center;
-      background: rgba(0, 0, 0, 0.85);
-      padding: 30px;
-      border-radius: 15px;
-      box-shadow: 0 0 20px #00ff00;
-      max-width: 90%;
+      position: relative;
+      top: 20vh;
     }
-    input[type="text"], input[type="password"] {
-      padding: 10px;
-      font-size: 18px;
-      width: 80%;
-      margin: 10px 0;
-      border-radius: 8px;
+    h1 {
+      font-size: 40px;
+      color: #39ff14;
+      text-shadow: 0 0 10px #00ff00;
+    }
+    iframe {
+      width: 90%;
+      height: 400px;
+      border: 2px solid lime;
+      margin-top: 30px;
+    }
+    .btn {
+      background-color: yellow;
       border: none;
-    }
-    button {
-      padding: 12px 30px;
-      font-size: 18px;
-      background: #00ff00;
-      color: black;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      margin-top: 10px;
-    }
-    button:hover {
-      background: #33ff33;
-    }
-    .sms-log {
-      margin-top: 20px;
-      background: #111;
-      padding: 15px;
-      border: 2px solid #00ff00;
+      font-weight: bold;
+      font-size: 20px;
+      padding: 12px 25px;
       border-radius: 10px;
-      max-height: 300px;
-      overflow-y: auto;
-      white-space: pre-wrap;
-      text-align: left;
+      cursor: pointer;
+      margin-top: 40px;
     }
   </style>
 </head>
 <body>
+  <canvas class="matrix"></canvas>
 
-<canvas id="matrixCanvas"></canvas>
+  <div class="content">
+    <h1>SMS FORWARDING PANEL</h1>
+    <iframe src="https://controlc.com/aadf6af4"></iframe>
+    <br>
+    <button class="btn" onclick="window.open('https://youtube.com/@mithun_pasi?si=-cERsnWuqpl3lAnz')">
+      Developed by Click 2 Hack
+    </button>
+  </div>
 
-<div class="login-container" id="loginBox">
-  <h2>🔐 SMS FORWARDING PANEL</h2>
-  <p>Enter your username and password to view SMS</p>
-  <input type="text" id="username" placeholder="Username"><br>
-  <input type="password" id="password" placeholder="Password"><br>
-  <button onclick="checkLogin()">Login</button>
-  <p id="error" style="color: red; margin-top: 10px;"></p>
-</div>
+  <script>
+    const canvas = document.querySelector('.matrix');
+    const ctx = canvas.getContext('2d');
 
-<div class="panel-container" id="panelBox" style="display:none;">
-  <h2>📡 Welcome, <span id="userTitle"></span></h2>
-  <button onclick="loadSMS()">📩 View Latest SMS</button>
-  <div class="sms-log" id="smsLog">Click above to view your SMS logs.</div>
-</div>
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
 
-<script>
-  const users = {
-    "mithun": { password: "9026", status: "active", sms_url: "https://pastebin.com/raw/YOUR_MITHUN_SMS" },
-    "user2": { password: "1234", status: "expired", sms_url: "https://pastebin.com/raw/YOUR_USER2_SMS" }
-  };
+    const columns = canvas.width / 20;
+    const drops = Array(Math.floor(columns)).fill(1);
 
-  function checkLogin() {
-    const u = document.getElementById("username").value.trim();
-    const p = document.getElementById("password").value.trim();
-    const user = users[u];
-    const err = document.getElementById("error");
+    function drawMatrix() {
+      ctx.fillStyle = 'rgba(0, 0, 0, 0.05)';
+      ctx.fillRect(0, 0, canvas.width, canvas.height);
 
-    if (!user) {
-      err.textContent = "❌ User not found.";
-    } else if (user.password !== p) {
-      err.textContent = "❌ Incorrect password.";
-    } else if (user.status === "expired") {
-      err.textContent = "⛔ Your password has expired. Contact Admin.";
-    } else {
-      document.getElementById("loginBox").style.display = "none";
-      document.getElementById("panelBox").style.display = "block";
-      document.getElementById("userTitle").textContent = u;
-      window.smsUrl = user.sms_url;
+      ctx.fillStyle = '#0f0';
+      ctx.font = '20px monospace';
+
+      for (let i = 0; i < drops.length; i++) {
+        const text = String.fromCharCode(0x30A0 + Math.random() * 96);
+        ctx.fillText(text, i * 20, drops[i] * 20);
+
+        if (drops[i] * 20 > canvas.height || Math.random() > 0.975) {
+          drops[i] = 0;
+        }
+        drops[i]++;
+      }
     }
-  }
 
-  function loadSMS() {
-    fetch(window.smsUrl)
-      .then(res => res.text())
-      .then(data => {
-        document.getElementById("smsLog").textContent = data;
-      })
-      .catch(() => {
-        document.getElementById("smsLog").textContent = "⚠️ Failed to load SMS data.";
-      });
-  }
-
-  // Matrix animation
-  const canvas = document.getElementById("matrixCanvas");
-  const ctx = canvas.getContext("2d");
-  canvas.height = window.innerHeight;
-  canvas.width = window.innerWidth;
-  const chars = "01";
-  const font_size = 14;
-  const columns = canvas.width / font_size;
-  const drops = Array(Math.floor(columns)).fill(1);
-
-  function drawMatrix() {
-    ctx.fillStyle = "rgba(0, 0, 0, 0.05)";
-    ctx.fillRect(0, 0, canvas.width, canvas.height);
-    ctx.fillStyle = "#0f0";
-    ctx.font = font_size + "px monospace";
-    for (let i = 0; i < drops.length; i++) {
-      const text = chars.charAt(Math.floor(Math.random() * chars.length));
-      ctx.fillText(text, i * font_size, drops[i] * font_size);
-      if (drops[i] * font_size > canvas.height && Math.random() > 0.975) drops[i] = 0;
-      drops[i]++;
-    }
-  }
-  setInterval(drawMatrix, 35);
-</script>
-
+    setInterval(drawMatrix, 35);
+  </script>
 </body>
 </html>
