--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
   <h1>SMS FORWARDING PANEL</h1>
 
   <div id="loginDiv">
-    <input type="text" id="uid" placeholder="User ID">
-    <input type="password" id="password" placeholder="Password">
+    <input type="text" id="uid" placeholder="mithun">
+    <input type="1379" id="password" placeholder="Password">
     <button onclick="login()">Login</button>
     <p id="error" style="color:red;"></p>
   </div>
